--- a/Razorpay/index.html
+++ b/Razorpay/index.html
@@ -656,6 +656,12 @@
           >
             Explore Razorpay Business Banking
           </h2>
+          <!-- Section Heading - mobile -->
+     <h2
+     class="inline-block text-center md:hidden font-mullish text-[2.5rem] leading-[1.2] font-bold mx-auto text-white"
+   >
+   Explore Razorpay <span class="text-greenLight">Business Banking</span>
+          </h2>
           <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-16"></div>
 
           <!-- main feature box -->
